@@ -1,5 +1,7 @@
 == master
 
+* Improve #fast_bootstrap speed by 50% by using the connection directly
+
 == 0.4.0 / 2009-04-30
 
 * Allow cache to be cleared on a per-enumeration basis
